minor website changes

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 		<!-- Header -->
 		<header id="header">
-			<a href="index.html" class="logo">T S B</a>
+			<a  class="logo">T S B</a>
 		</header>
 
 		<!-- Main -->
@@ -123,7 +123,7 @@
 					<header>
 						<h2><a>Notkatsa</a></h2>
 					</header>
-					<a href="#" class="image fit"><img src="images/pic3.png" alt="" /></a>
+					<a class="image fit"><img src="images/pic3.png" alt="" /></a>
 					<p>Hey Team! I am Notis, I study computer science but most of the time I buy NFTs. I have a passion
 						for crypto so I decided it would make sense to get together a strong team and make something
 						like this come to life.
@@ -133,7 +133,7 @@
 					<header>
 						<h2><a>Robert</a></h2>
 					</header>
-					<a href="#" class="image fit"><img src="images/pic4.png" alt="" /></a>
+					<a class="image fit"><img src="images/pic4.png" alt="" /></a>
 					<p>Hi guys, my name is Robert, also known as Robi, I am a full time crypto/NFT trader-analyst.
 						Before that I used to be a chef. I have been studying crypto for the past 2 years and been
 						providing my insight to many alpha groups. Smoking has been a part of my day for over a decade
