--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>The Solana Buds</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="icon" href="logopng.png" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" />
@@ -49,7 +50,7 @@
 							<div class="Roadmap_top">
 								<div class="map_item">
 									<h4>Launch - Minting</h4>
-									<p>4200 SolBuds are going to be released onto the Solana blockchain. We will be having a Whitelist sale exclusively for @Bud List members. After our Public Launch we will get listed on Marketplaces and create a special community for our holders.</p>
+									<p>4200 SolBuds are going to be released onto the Solana blockchain. We will be having a Whitelist sale exclusively for BudList members. After our Public Launch we will get listed on Marketplaces and create a special community for our holders.</p>
 								</div>
 								<div class="map_item">
 									<h4>The DAO</h4>
