--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>The Solana Buds</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="icon" href="logopng.png" />
+	<link rel="shortcut icon" type = "image/png" href="images/logo.png" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" />
