--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<!-- Intro -->
 		<div id="intro">
 			<h1>The Solana Buds</h1>
-			<p>The Solana Buds is a collection of 4200 3D Buds Living in the Solana Blockchain.</p>
+			<p>The Solana Buds is a collection of 777 3D Buds Living in the Solana Blockchain.</p>
 			<ul class="actions">
 				<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 			</ul>
@@ -37,7 +37,7 @@
 			<article class="post featured">
 				<header class="major">
 					<h2>The Solana Buds</h2>
-					<p>The Solana Buds is a collection of 4200 3D Buds Living in the Solana Blockchain</p>
+					<p>The Solana Buds is a collection of 777 3D Buds Living in the Solana Blockchain</p>
 				</header>
 				<a class="image main"><img src="images/pic1.png" alt="" /></a>
 
@@ -50,7 +50,7 @@
 							<div class="Roadmap_top">
 								<div class="map_item">
 									<h4>Launch - Minting</h4>
-									<p>4200 SolBuds are going to be released onto the Solana blockchain. We will be having a Whitelist sale exclusively for BudList members. After our Public Launch we will get listed on Marketplaces and create a special community for our holders.</p>
+									<p>777 SolBuds are going to be released onto the Solana blockchain. We will be having a Whitelist sale exclusively for BudList members. After our Public Launch we will get listed on Marketplaces and create a special community for our holders.</p>
 								</div>
 								<div class="map_item">
 									<h4>The DAO</h4>
@@ -158,7 +158,7 @@
 				<ul class="icons">
 					<li><a href="https://twitter.com/TheSolBuds" class="icon brands fa-twitter"><span
 								class="label">Twitter</span></a></li>
-					<li><a href="https://discord.gg/9eTyxg89ZJ" class="icon brands fa-discord"><span
+					<li><a href="https://discord.gg/Km9AgKqytb" class="icon brands fa-discord"><span
 								class="label">Discord</span></a></li>
 	
 				</ul>
